--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,41 @@
-version: 2
 
-# Define the jobs we want to run for this project
-jobs:
-  build:
-    docker:
-      - image: 'circleci/openjdk:latest-browsers'
+  # Java Gradle CircleCI 2.0 configuration file
+  #
+  # Check https://circleci.com/docs/2.0/language-java/ for more details
+  #
+  version: 2
 
-    working_directory: ~/repo
-    environment:
-    # get from git and get maven dependencies
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "pom.xml" }}
-            - v1-dependencies-
-      - run: mvn dependency:go-offline
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
+  # Define the jobs we want to run for this project
+  jobs:
+    build:
+      docker:
+        - image: 'circleci/openjdk:latest-browsers'
 
-      # run tests!
-      - run:
-          name: Running tests
-          command: mvn clean install
-      - run:
-          name: Generate allure report
-          command: mvn allure:report
-          when: always
-      - store_test_results:
-          path: target/surefire-reports/junitreports
-          when: always
-      - store_artifacts:
-          path: target/site/allure-maven-plugin/
+      working_directory: ~/repo
+      environment:
+      # get from git and get maven dependencies
+      steps:
+        - checkout
+        - restore_cache:
+            keys:
+              - v1-dependencies-{{ checksum "pom.xml" }}
+              - v1-dependencies-
+        - run: mvn dependency:go-offline
+        - save_cache:
+            paths:
+              - ~/.m2
+            key: v1-dependencies-{{ checksum "pom.xml" }}
+
+        # run tests!
+        - run:
+            name: Running tests
+            command: mvn clean install
+        - run:
+            name: Generate allure report
+            command: mvn allure:report
+            when: always
+        - store_test_results:
+            path: target/surefire-reports/junitreports
+            when: always
+        - store_artifacts:
+            path: target/site/allure-maven-plugin/
