--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 url=https://aqa06vladimirnatali.testrail.io
-browser =chrome
+browser =remote_chrome
 username=nataliiilebedeva@gmail.com
 password=VladimirNatali
 timeout=20
