--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,6 @@
-url=https://aqa06vladimirnatali.testrail.io
+url=https://aqa06vladimirnatallia.testrail.io
 browser =chrome
-username=nataliiilebedeva@gmail.com
+username=mkkinj@gmail.com
 password=VladimirNatali
 timeout=20
 headless=false
